rust/tests/macro_err/starts_punct.stderr
error: expected string literal, identifier, [...], or {...}
 --> tests/macro_err/starts_punct.rs:3:21
  |
3 |     tindalwic_json!(+ then more)
  |                     ^
