rust/tests/macro_err/starts_punct.rs
use tindalwic::tindalwic_json;
fn main() {
    tindalwic_json!(+ then more)
}
